[gd_scene load_steps=15 format=3 uid="uid://br8wbfpuiiell"]

[ext_resource type="Script" path="res://MainMenu/main_menu.gd" id="1_31nd3"]
[ext_resource type="FontFile" uid="uid://bhbd0rtdqcjfo" path="res://Fonts/Pixeled.ttf" id="3_05xnj"]
[ext_resource type="Shader" path="res://Game/game.gdshader" id="3_8viyr"]
[ext_resource type="Texture2D" uid="uid://bptci3oxfgj2v" path="res://MainMenu/menu_image.png" id="4_efavp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eii3x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k0wxb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_focnv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ig3p3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uvnlf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_u1uxm"]
shader = ExtResource("3_8viyr")
shader_parameter/circle_size = 0.0

[sub_resource type="Animation" id="Animation_0m5mt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/TransitionRect:material:shader_parameter/circle_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/TransitionRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_m4g70"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/TransitionRect:visible")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/TransitionRect:material:shader_parameter/circle_size")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_som7g"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/TransitionRect:material:shader_parameter/circle_size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.925]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/TransitionRect:visible")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tygcw"]
_data = {
"RESET": SubResource("Animation_0m5mt"),
"fade_in": SubResource("Animation_m4g70"),
"fade_out": SubResource("Animation_som7g")
}

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_31nd3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = 210.0
offset_right = 200.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PlayButton" type="Button" parent="CanvasLayer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.235294, 0.376471, 0.423529, 1)
theme_override_colors/font_pressed_color = Color(0.290196, 0.196078, 0.407843, 1)
theme_override_colors/font_hover_color = Color(0.180392, 0.517647, 0.639216, 1)
theme_override_fonts/font = ExtResource("3_05xnj")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_eii3x")
theme_override_styles/hover = SubResource("StyleBoxEmpty_k0wxb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_focnv")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ig3p3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_uvnlf")
text = "PLAY"
flat = true

[node name="QuitButton" type="Button" parent="CanvasLayer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.235294, 0.376471, 0.423529, 1)
theme_override_colors/font_pressed_color = Color(0.290196, 0.196078, 0.407843, 1)
theme_override_colors/font_hover_color = Color(0.180392, 0.517647, 0.639216, 1)
theme_override_fonts/font = ExtResource("3_05xnj")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_eii3x")
theme_override_styles/hover = SubResource("StyleBoxEmpty_k0wxb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_focnv")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ig3p3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_uvnlf")
text = "quit"
flat = true

[node name="Label" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -42.0
offset_right = 43.0
offset_bottom = 463.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_05xnj")
theme_override_font_sizes/font_size = 128
text = "Exolinguist"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TransitionRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_u1uxm")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -420.0
offset_bottom = 420.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.290196, 0.196078, 0.407843, 1)
metadata/_edit_use_anchors_ = true

[node name="Transitions" type="AnimationPlayer" parent="CanvasLayer"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_tygcw")
}
autoplay = "fade_out"

[node name="MenuImage" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(960, 540)
scale = Vector2(8, 8)
texture = ExtResource("4_efavp")

[connection signal="pressed" from="CanvasLayer/VBoxContainer/PlayButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="animation_finished" from="CanvasLayer/Transitions" to="." method="_on_transitions_animation_finished"]
